syntax = "proto3";

package word;

service WordService {
    rpc Chain(ChainRequest) returns (ChainResponse) {}
}

message ChainRequest {
    repeated string input = 1;
    uint32 count = 2;
}

message ChainResponse {
    repeated string output = 1;
}